<resources>
    <string name="app_name">SSMS</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_short">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="username">Username</string>
    <string name="phone_numer">Cellphone Number</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Dont\'t have account? Get registered in SSMS now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main" translatable="false">SSMS</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="crypt_method">Encryption Method</string>
    <string name="bytes_long">Bytes Long</string>
    <string name="public_key_reg2">Public key (leave empty for auto generate)</string>
    <string name="private_key_reg2">Private key (leave empty for auto generate)</string>
    <string name="save_private_key">Save private key on app server (Optional)</string>
    <string name="accept_terms">I have read and accept terms of use</string>
    <string name="finish">Finish</string>
    <string name="validating_info">Validating information, please wait...</string>
    <string name="error_try_again">An unexpected error has occurred. Please try again...</string>
    <string name="no_contacts">You don\'t have contacts yet.</string>
    <string name="press_plus">Press on + button to add one.</string>
    <string name="loading_contacts">Loading contacts, please wait...</string>
    <string name="logout">Logout</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_send">Send</string>
    <string name="title_share_activity">Share crypt messages</string>


</resources>
