<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.indi.ssms.Register2Activity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progressBar_register2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_method_crypt_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/crypt_method" />

        <Spinner
            android:id="@+id/spinner_crypt_method_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tv_num_bytes_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:text="@string/bytes_long" />

        <Spinner
            android:id="@+id/spinner_crypt_bytes_register2"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_public_key_reg2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/public_key_reg2"
                android:ems="10"
                android:textColor="@android:color/white"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_private_key_reg2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/private_key_reg2"
                android:ems="10"
                android:textColor="@android:color/white"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switch1_reg2"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/save_private_key" />

        <Switch
            android:id="@+id/switch2_reg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/accept_terms" />

        <Button
            android:id="@+id/btn_finish_reg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="@string/finish" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
