<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.indi.ssms.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:contentInsetStart="0dp"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/btn_login_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <ProgressBar
            android:id="@+id/progressBar_main_activity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="20dp"
             />

        <TextView
            android:id="@+id/tv_loading_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_contacts"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_no_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_contacts"
        android:textAlignment="center"
        android:visibility="gone" />


        <TextView
            android:id="@+id/tv_press_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/press_plus"
            android:textAlignment="center"
            android:visibility="gone" />

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefreshMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewContacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:smoothScrollbar="true" />

    </android.support.v4.widget.SwipeRefreshLayout>

    </FrameLayout>

    <include layout="@layout/content_main" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_share" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fabShare"
            app:fabSize="mini"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_add_contact" />
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
